--- a/package.json
+++ b/package.json
@@ -26,15 +26,24 @@
   "author": "Johan Dahl",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^29.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.0",
-    "jest": "^29.0.0",
-    "tsup": "^7.0.0",
-    "typescript": "^5.0.0"
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.9.1",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.57.1",
+    "jest": "^29.7.0",
+    "tsup": "^7.2.0",
+    "typescript": "^5.6.3"
   },
   "peerDependencies": {
     "typescript": ">=4.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VevKit/saga.git"
+  },
+  "bugs": {
+    "url": "https://github.com/VevKit/saga/issues"
+  },
+  "homepage": "https://github.com/VevKit/saga"
 }
