--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@vevkit/saga",
   "version": "0.1.3",
   "description": "A functional, composable logging library for JavaScript/TypeScript applications",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
